--- a/test/index.html
+++ b/test/index.html
@@ -9,7 +9,7 @@
   <body>
     <script>
       WCT.loadSuites([
-
+        "../node_modules/@sakai-elements/sakai-rubric/test/index.html"
       ]);
     </script>
   </body>
